--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,13 @@
     <string name="movie_hint">Enter movie</string>
     <string name="increase_font_size">Increase font size</string>
     <string name="decrease_font_size">Decrease font size</string>
+    <string name="clear">Clear</string>
+    <string name="dialogDeleteTitle">Confirm delete</string>
+    <string name="confirm_delete">Confirm delete</string>
+    <string name="confirm_delete_message">Are you sure you want to delete this quote?</string>
+    <string-array name="settings_types">
+        <item>Sound</item>
+        <item>Search</item>
+        <item>General</item>
+    </string-array>
 </resources>
