--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,8 @@
     <string name="action_settings">Settings</string>
     <string name="defaultQuote">Quote</string>
     <string name="defaultMovie">Movie</string>
-    <string name="dialogTitle">"Add a Quote"</string>
+    <string name="dialogTitleAdd">"Add a Quote"</string>
+    <string name="dialogTitleEdit">"Edit a Quote"</string>
     <string name="quote_hint">Enter quote</string>
     <string name="movie_hint">Enter movie</string>
     <string name="increase_font_size">Increase font size</string>
@@ -12,6 +13,7 @@
     <string name="dialogDeleteTitle">Confirm delete</string>
     <string name="confirm_delete">Confirm delete</string>
     <string name="confirm_delete_message">Are you sure you want to delete this quote?</string>
+    <string name="delete">Delete</string>
     <string-array name="settings_types">
         <item>Sound</item>
         <item>Search</item>
